update reservation and payment system and update user service
