# backend/cmd/main/docs/swagger.json
@@ -366,6 +366,43 @@
                 }
             }
         },
+        "/api/hotel/cleint/{hotel_service_id}": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "cancel or refund reservation",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "HotelServices"
+                ],
+                "summary": "Cancel or Refund Reservation",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Hotel Service ID",
+                        "name": "hotel_service_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/hotel/client/booking": {
             "post": {
                 "security": [
@@ -397,7 +434,7 @@
                 }
             }
         },
-        "/api/hotel/client/{id}/{status}": {
+        "/api/hotel/client/{hotel_service_id}/{status}": {
             "get": {
                 "security": [
                     {
@@ -416,7 +453,7 @@
                     {
                         "type": "string",
                         "description": "ID",
-                        "name": "id",
+                        "name": "hotel_service_id",
                         "in": "path",
                         "required": true
                     },
@@ -441,7 +478,7 @@
                 }
             }
         },
-        "/api/hotel/{id}": {
+        "/api/hotel/{hotel_service_id}": {
             "get": {
                 "security": [
                     {
@@ -460,7 +497,7 @@
                     {
                         "type": "string",
                         "description": "ID",
-                        "name": "id",
+                        "name": "hotel_service_id",
                         "in": "path",
                         "required": true
                     }
@@ -483,19 +520,19 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "update hotel service",
+                "description": "Accept or Reject a booking request",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "HotelServices"
                 ],
-                "summary": "Update Hotel Service",
+                "summary": "Accept or Reject a booking request",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID",
-                        "name": "id",
+                        "description": "Hotel Service ID",
+                        "name": "hotel_service_id",
                         "in": "path",
                         "required": true
                     }
@@ -513,7 +550,7 @@
                 }
             }
         },
-        "/api/hotel/{id}/{status}": {
+        "/api/hotel/{hotel_service_id}/{status}": {
             "get": {
                 "security": [
                     {
@@ -532,7 +569,7 @@
                     {
                         "type": "string",
                         "description": "ID",
-                        "name": "id",
+                        "name": "hotel_service_id",
                         "in": "path",
                         "required": true
                     },
@@ -758,6 +795,43 @@
                         "type": "string",
                         "description": "User ID",
                         "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/user/card/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "get credit card",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get Credit Card",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
